--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="UNAT - Universidad Nacional de Tecnología. Formamos profesionales líderes en tecnología e innovación.">
+    <meta name="keywords" content="universidad, tecnología, ingeniería, educación, UNAT">
+    <meta name="author" content="UNAT">
     <title>UNAT - Universidad Nacional de Tecnología</title>
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🎓</text></svg>">
     <link rel="stylesheet" href="css/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
